...
    "button_buy_btc" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "USD → BTC"
          }
        },
        "bn" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "USD → BTC"
...
            "value" : "Fertig"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Done"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hecho"
...
            "value" : "Rechnung generieren"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Generate Invoice"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Generar Factura"
...
            "value" : "Empfangen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Receive"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Recibir"
...
    "button_sell_btc" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "BTC → USD"
          }
        },
        "bn" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "BTC → USD"
...
            "value" : "Senden"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Send"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enviar"
...
    "confirmations_complete" : {
      "extractionState" : "extracted_with_value",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Confirmed"
          }
        }
      }
    },
    "custody_self" : {
      "extractionState" : "manual",
...
            "value" : "Rechnungsadresse"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "To"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dirección de Factura"
...
            "value" : "On-Chain"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Onchain Account"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "On-chain"
...
            "value" : "On-Chain"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Onchain"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "On-chain"
...
            "value" : "Verlauf"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "History"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Historial"
...
    "placeholder" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "0.00"
          }
        },
        "bn" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "০.০০"
...
            "value" : "Zahlungen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Payments"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pagos"
...
            "value" : "Start"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Home"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Inicio"
...
